--- a/home.html
+++ b/home.html
@@ -18,16 +18,16 @@
 <body class="demo">
 
 
-	<!-- <div id="loader-wrapper">
+	<div id="loader-wrapper">
 	  <div id="loader"></div>
 
 	  <div class="loader-section section-left"></div>
 	  <div class="loader-section section-right"></div>
-data-interval="500"
-	</div>  
- -->
 
-  <div id="main" class="carousel vert slide" data-ride="carousel">
+	</div>  
+ 
+
+  <div id="main" class="carousel vert slide" data-ride="carousel" data-interval="500">
 
     
       <ol class="carousel-indicators nav flex-column" id="my-flex">
