--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
 
 <body class="demo">
 
- <!--  <div id="loader-wrapper">
+ <div id="loader-wrapper">
     <div id="loader"></div>
 
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 
-  </div> -->
+  </div>
 
   <div class="container-fluid img">
 
